// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav renders correctly 1`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav"
    >
      <ul
        class="nav__items-left"
      >
        <li
          class="nav__item-logo"
        >
          <test-file-stub
            classname="svg__logo"
            focusable="false"
            role="img"
          />
        </li>
        <li
          class="nav__item"
        >
          <button>
            <span
              class="nav__item-header"
            />
            <test-file-stub
              aria-hidden="true"
              classname="nav__item-header-triangle"
              focusable="false"
            />
          </button>
          <ul
            class="nav__dropdown"
          >
            <li
              class="nav__dropdown-item"
            >
              <button />
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button />
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button />
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button />
            </li>
            <li
              class="nav__dropdown-item"
            >
              <a />
            </li>
          </ul>
        </li>
        <li
          class="nav__item"
        >
          <button>
            <span
              class="nav__item-header"
            />
            <test-file-stub
              aria-hidden="true"
              classname="nav__item-header-triangle"
              focusable="false"
            />
          </button>
          <ul
            class="nav__dropdown"
          >
            <li
              class="nav__dropdown-item"
            >
              <button>
                <span
                  class="nav__keyboard-shortcut"
                >
                  ⌃+⇧+F
                </span>
              </button>
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button>
                <span
                  class="nav__keyboard-shortcut"
                >
                  ⌃+F
                </span>
              </button>
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button>
                <span
                  class="nav__keyboard-shortcut"
                >
                  ⌃+H
                </span>
              </button>
            </li>
          </ul>
        </li>
        <li
          class="nav__item"
        >
          <button>
            <span
              class="nav__item-header"
            />
            <test-file-stub
              aria-hidden="true"
              classname="nav__item-header-triangle"
              focusable="false"
            />
          </button>
          <ul
            class="nav__dropdown"
          >
            <li
              class="nav__dropdown-item"
            >
              <button />
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button />
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button>
                <span
                  class="nav__keyboard-shortcut"
                >
                  ⌃+Enter
                </span>
              </button>
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button>
                <span
                  class="nav__keyboard-shortcut"
                >
                  ⇧+⌃+Enter
                </span>
              </button>
            </li>
          </ul>
        </li>
        <li
          class="nav__item"
        >
          <button>
            <span
              class="nav__item-header"
            />
            <test-file-stub
              aria-hidden="true"
              classname="nav__item-header-triangle"
              focusable="false"
            />
          </button>
          <ul
            class="nav__dropdown"
          >
            <li
              class="nav__dropdown-item"
            >
              <button />
            </li>
            <li
              class="nav__dropdown-item"
            >
              <a
                href="https://p5js.org/reference/"
                rel="noopener noreferrer"
                target="_blank"
              />
            </li>
            <li
              class="nav__dropdown-item"
            >
              <a />
            </li>
          </ul>
        </li>
      </ul>
    </nav>
  </header>
</DocumentFragment>
`;

exports[`Nav renders dashboard version 1`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav"
    >
      <ul
        class="nav__items-left"
      >
        <li
          class="nav__item-logo"
        >
          <test-file-stub
            aria-label="p5.js Logo"
            classname="svg__logo"
            focusable="false"
            role="img"
          />
        </li>
        <li
          class="nav__item nav__item--no-icon"
        >
          <a
            class="nav__back-link"
          >
            <test-file-stub
              aria-hidden="true"
              classname="nav__back-icon"
              focusable="false"
            />
            <span
              class="nav__item-header"
            >
              Back to Editor
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </header>
</DocumentFragment>
`;

exports[`Nav renders editor version 1`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav"
    >
      <ul
        class="nav__items-left"
      >
        <li
          class="nav__item-logo"
        >
          <test-file-stub
            aria-label="p5.js Logo"
            classname="svg__logo"
            focusable="false"
            role="img"
          />
        </li>
        <li
          class="nav__item"
        >
          <button>
            <span
              class="nav__item-header"
            >
              File
            </span>
            <test-file-stub
              aria-hidden="true"
              classname="nav__item-header-triangle"
              focusable="false"
            />
          </button>
          <ul
            class="nav__dropdown"
          >
            <li
              class="nav__dropdown-item"
            >
              <button>
                New
              </button>
            </li>
          </ul>
        </li>
        <li
          class="nav__item"
        >
          <button>
            <span
              class="nav__item-header"
            >
              Edit
            </span>
            <test-file-stub
              aria-hidden="true"
              classname="nav__item-header-triangle"
              focusable="false"
            />
          </button>
          <ul
            class="nav__dropdown"
          >
            <li
              class="nav__dropdown-item"
            >
              <button>
                Tidy Code
                <span
                  class="nav__keyboard-shortcut"
                >
                  ⌃+⇧+F
                </span>
              </button>
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button>
                Find
                <span
                  class="nav__keyboard-shortcut"
                >
                  ⌃+F
                </span>
              </button>
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button>
                Replace
                <span
                  class="nav__keyboard-shortcut"
                >
                  ⌃+H
                </span>
              </button>
            </li>
          </ul>
        </li>
        <li
          class="nav__item"
        >
          <button>
            <span
              class="nav__item-header"
            >
              Sketch
            </span>
            <test-file-stub
              aria-hidden="true"
              classname="nav__item-header-triangle"
              focusable="false"
            />
          </button>
          <ul
            class="nav__dropdown"
          >
            <li
              class="nav__dropdown-item"
            >
              <button>
                Add File
              </button>
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button>
                Add Folder
              </button>
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button>
                Run
                <span
                  class="nav__keyboard-shortcut"
                >
                  ⌃+Enter
                </span>
              </button>
            </li>
            <li
              class="nav__dropdown-item"
            >
              <button>
                Stop
                <span
                  class="nav__keyboard-shortcut"
                >
                  ⇧+⌃+Enter
                </span>
              </button>
            </li>
          </ul>
        </li>
        <li
          class="nav__item"
        >
          <button>
            <span
              class="nav__item-header"
            >
              Help
            </span>
            <test-file-stub
              aria-hidden="true"
              classname="nav__item-header-triangle"
              focusable="false"
            />
          </button>
          <ul
            class="nav__dropdown"
          >
            <li
              class="nav__dropdown-item"
            >
              <button>
                Keyboard Shortcuts
              </button>
            </li>
            <li
              class="nav__dropdown-item"
            >
              <a
                href="https://p5js.org/reference/"
                rel="noopener noreferrer"
                target="_blank"
              >
                Reference
              </a>
            </li>
            <li
              class="nav__dropdown-item"
            >
              <a>
                About
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </nav>
  </header>
</DocumentFragment>
`;
